cart page part-1

--- a/frontend/src/app/component/pages/food-page/food-page.component.html
+++ b/frontend/src/app/component/pages/food-page/food-page.component.html
@@ -26,6 +26,6 @@
                 {{food.price | currency}}
             </span>
         </div>
-        <button>Add to Cart</button>
+        <button (click)="addtocart()"> Add to Cart</button>
     </div>
 </div> 
