cart page part-2

--- a/frontend/src/app/component/partials/header/header.component.html
+++ b/frontend/src/app/component/partials/header/header.component.html
@@ -17,7 +17,7 @@
                 </li>
                 <li>
                     <a routerLink="/cart">cart
-                         <span>3</span>
+                         <span *ngIf="cartQuantity">{{cartQuantity}}</span>
                     </a>
                 </li>
             </ul>
