--- a/frontend/src/app/component/pages/login-page/login-page.component.html
+++ b/frontend/src/app/component/pages/login-page/login-page.component.html
@@ -3,28 +3,23 @@
         <app-title title="Login"></app-title>
 
         <form action="" [formGroup]="loginForm" (ngSubmit)="submit()">
-            <div class="input-container">
-                <label for="">Email</label>
-                <div>
-                    <input type="text" placeholder="Enter your email" formControlName="email">
-                </div>
-                <div class="error-list" *ngIf="fc.email.errors && isSubmitted">
-                    <div *ngIf="fc.email.errors.required">Should not be Empty</div>
-                    <div *ngIf="fc.email.errors.email">Email is not correct</div>
-                </div>
-            </div>
-            <div class="input-container">
-                <label for="">Password</label>
-                <div>
-                    <input type="password" placeholder="Enter your password" formControlName="password">
-                </div>
-                <div class="error-list" *ngIf="fc.password.errors && isSubmitted">
-                    <div *ngIf="fc.password.errors.required">Should not be Empty</div>
-                </div>
-            </div>
-            <div class="button">
-                <button type="submit">Login</button>
-            </div>
+            <text-input 
+            [control]="fc.email" 
+            [showErrorWhen]="isSubmitted"
+            type="email" 
+            label="Email"></text-input>
+           
+            <text-input 
+            [control]="fc.password" 
+            [showErrorWhen]="isSubmitted"
+            type="password" 
+            label="Password"></text-input>
+        
+         
+           
+            <default-button
+            text="Login"
+            ></default-button>
         </form>
     </div>
 </div>
